--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>NgBitsDemo</title>
-  <base href="https://antonio07c.github.io/ng-bits/">
+  <base href="https://antonio07c.github.io">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
