--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgBitsDemo</title>
+  <title>Ng-Bits</title>
   <base href="https://antonio07c.github.io">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">  
@@ -11,5 +11,5 @@
 <link rel="stylesheet" href="styles.5dfe28c581b34af76d08.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.314d482f7da37dede447.js"></script><script type="text/javascript" src="main.069134ac91c82de36cca.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.314d482f7da37dede447.js"></script><script type="text/javascript" src="main.630e8b488c78c86c6e7d.js"></script></body>
 </html>
