changed base url

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ng-Bits</title>
-  <base href="https://antonio07c.github.io/">
+  <title>Ng-Bits | Angular UI Components</title>
+  <base href="ngbits.antoniocastro.dev">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -11,5 +11,5 @@
 <link rel="stylesheet" href="styles.5dfe28c581b34af76d08.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.314d482f7da37dede447.js"></script><script type="text/javascript" src="main.0c847e4445af5ee8faef.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.314d482f7da37dede447.js"></script><script type="text/javascript" src="main.13a6e230d4e80bf79fc7.js"></script></body>
 </html>
