--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Ng-Bits | Angular UI Components</title>
-  <base href="ngbits.antoniocastro.dev">
+  <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
